# magitty

./: .gitignore  LICENSE  README.md  flake.nix  magitty.cabal
exe/: Main.hs
src/: Magitty.hs
