cabal-version:      3.0
name:               magitty
version:            0.1.0.0
synopsis:           Magit for your terminal
license:            MIT
license-file:       LICENSE
author:             Andrew McMiddlin
maintainer:         andrew@mcmiddlins.id.au
copyright:          Andrew McMiddlin 2022
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror

library
    import:            warnings
    exposed-modules:   Magitty
    -- other-modules:
    -- other-extensions:
    build-depends:
        base           ^>=4.16.3.0,
        brick          >=0.68 && <0.69,
    hs-source-dirs:    src
    default-language:  Haskell2010

executable magitty
    import:           warnings
    hs-source-dirs:   exe
    main-is:          Main.hs
    build-depends:
        base          ^>=4.16.3.0,
        magitty
    default-language: Haskell2010
    ghc-options:      -threaded

test-suite magitty-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base          ^>=4.16.3.0,
        magitty
